Redmine Issue 905; PURPOSE: MediaViewer style/design; remove overflow hidden on card from custom_styles.css

--- a/shared/css/custom_styles.css
+++ b/shared/css/custom_styles.css
@@ -265,9 +265,6 @@ div:focus, div > span:focus {
 	width: 0;
 	overflow: hidden;
 }
-.accordion >.card {
-	overflow: hidden; 
-}
 a {
 	color:#006ee3;/*not working for accessibility*/
 	color: #0460c1;
